import "KeyCacheItemPair.proto";

package Alachisoft.NCache.Common.Protobuf;

message BulkGetCacheItemResponse {
	repeated KeyCacheItemPair KeyCacheItemPairs = 1;
	optional int32 commandID = 2 [default = -1];
	optional int64 requestId = 3;
}